# wechat_massage_capture

./: .gitattributes  .gitignore  LICENSE  PRODUCT.md  README.md  RUN-DESKTOP.bat  RUN-DIAGNOSTICS.bat  RUN-SAMPLE-30.bat  RUN-SCROLL-TEST.bat  RUN-WINDOWS.bat  SETUP-WINDOWS.bat  VERIFY-WINDOWS.bat  build_windows.ps1  capture_core.py  capture_wechat_group.py  desktop_app.py  pyproject.toml  requirements.txt  verify_hashes.py
installer/: WechatMessageCapture.iss
tests/: test_capture_core.py
